Added discover api fetch for trending movies

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,13 @@
     <header>
       <h1 class="main-header">The Online Movie Database</h1>
     </header>
-    <div class="background-image">
-
-    </div>
-    <div id="root"></div>
+    <div class="hero-box">
 
     
+
+
+    <div id="root"></div>
+    </div>
     <footer>
       <div class="footer"></div>
     </footer>
