--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <h1 class="main-header">The Online Movie Database</h1>
+      <h1 class="main-header"></h1>
     </header>
     <div class="hero-box">
       <div id="root"></div>
